--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=erp-backend
 
 # Configuración de conexión a MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/DivanniTestDB?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=150904vmam
+spring.datasource.username=USERNAME
+spring.datasource.password=PASSWORD
 
 # JPA y Hibernate
 spring.jpa.hibernate.ddl-auto=none
