--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=erp-backend
 
 # Configuración de conexión a MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/DivanniTestDB?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:0000/Test?useSSL=false&serverTimezone=UTC
 spring.datasource.username=USERNAME
 spring.datasource.password=PASSWORD
 
