--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,32 @@
-# Compilados de Java
+# Archivos de compilación
 /target/
+build/
 *.class
 
-# Configuración de IDEs
+# Configuración de editores
 .idea/
 .vscode/
 *.iml
-
-# Archivos del sistema
-.DS_Store
-Thumbs.db
+*.ipr
+*.iws
+.classpath
+.factorypath
+.project
+.settings
+.apt_generated
+.sts4-cache
 
 # Archivos sensibles
 src/main/resources/application.properties
 .env
-
-# Logs
 *.log
+
+# Archivos basura del sistema
+.DS_Store
+Thumbs.db
+
+# Excepciones opcionales
+!**/src/main/**/build/
+!**/src/test/**/build/
+!**/src/main/**/target/
+!**/src/test/**/target/
